# OpenGL-Demo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  c_cpp_properties.json  vcpkg.json
.github/workflows/: semgrep.yml
include/glad/include/glad/: gl.h  glad.h  vulkan.h
include/glad/src/: gl.c  glad.c  vulkan.c
shaders/: basic.frag  basic.vert
src/: Window.cpp  Window.hpp  camera.hpp  camera.inl  constants.hpp  gfx.cpp  gfx.hpp  gfx_gl.hpp  gfx_shader.inl  gfx_shaderprogram.inl  gfx_vbo.inl  glextloader.c  glextloader.cpp  main.cpp  menu.hpp  menu.inl  render.hpp  render_rendercontext.inl  texture.cpp  texture.hpp  texture.inl  window.cpp  window.hpp  window.inl  world.hpp  world_gameobject.inl  world_transform.inl
src/gfx/: RenderContext.cpp  RenderContext.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VBO.cpp  VBO.hpp  VertexArray.cpp  VertexBuffer.cpp  constants.hpp  gfx.cpp  structs.hpp
src/menu/: menu.cpp  menu.hpp
src/world/: Camera.cpp  Camera.hpp  GameObject.cpp  GameObject.hpp  Scene.cpp  Scene.hpp  Transform.cpp  Transform.hpp  constants.hpp
textures/: da_baby_car.dds  gaga.dds
